@@ -1372,8 +1372,10 @@ class Meeting(OrderedBaseFolder, BrowserDefaultMixin):
 
     def getBeforeFrozenStates_cachekey(method, self):
         '''cachekey method for self.getBeforeFrozenStates.'''
-        # do only compute one time
-        return True
+        # do only re-compute if cfg changed
+        tool = api.portal.get_tool('portal_plonemeeting')
+        cfg = tool.getMeetingConfig(self)
+        return (cfg.getId(), cfg._p_mtime)
 
     @ram.cache(getBeforeFrozenStates_cachekey)
     def getBeforeFrozenStates(self):
