@@ -22,6 +22,7 @@
 # 02110-1301, USA.
 #
 
+import transaction
 from copy import deepcopy
 from os import path
 
@@ -52,6 +53,7 @@ from Products.PloneMeeting.config import MEETING_STATES_ACCEPTING_ITEMS
 from Products.PloneMeeting.config import NO_TRIGGER_WF_TRANSITION_UNTIL
 from Products.PloneMeeting.MeetingItem import MeetingItem
 from Products.PloneMeeting.tests.PloneMeetingTestCase import PloneMeetingTestCase
+from Products.PloneMeeting.tests.PloneMeetingTestCase import pm_logger
 from Products.PloneMeeting.tests.testUtils import ASSEMBLY_CORRECT_VALUE
 from Products.PloneMeeting.tests.testUtils import ASSEMBLY_WRONG_VALUE
 from Products.PloneMeeting.utils import getCurrentMeetingObject
@@ -2309,6 +2311,66 @@ class testMeeting(PloneMeetingTestCase):
 
         # cleanUp zmcl.load_config because it impact other tests
         zcml.cleanUp()
+
+    def test_pm_GetBeforeFrozenStates(self):
+        """This should return states before the 'frozen' state.
+           Test this especially because it is cached.
+           This test is very WF specific and only works with the base meeting_workflow."""
+        cfg = self.meetingConfig
+        cfg2 = self.meetingConfig2
+        if 'no_publication' not in cfg.listWorkflowAdaptations() or \
+           'no_publication' not in cfg2.listWorkflowAdaptations():
+            pm_logger.info("Bypassing test test_pm_GetBeforeFrozenStates because "
+                           "it needs the 'no_publication' workflow adaptation.")
+            return
+
+        cfg.setWorkflowAdaptations(())
+        cfg.setMeetingWorkflow('meeting_workflow')
+        cfg.at_post_edit_script()
+        cfg2.setWorkflowAdaptations(())
+        cfg2.setMeetingWorkflow('meeting_workflow')
+        cfg2.at_post_edit_script()
+
+        self.changeUser('pmManager')
+        meeting = self.create('Meeting', date=DateTime('2018/04/09'))
+        self.assertEqual(sorted(meeting.getBeforeFrozenStates()),
+                         ['created', 'published'])
+        # use the no_publication WF adaptation to remove state 'published'
+        cfg.setWorkflowAdaptations(('no_publication', ))
+        # do not use at_post_edit_script that does a cleanRamCache()
+        cfg.registerPortalTypes()
+        transaction.commit()
+        self.assertEqual(sorted(meeting.getBeforeFrozenStates()),
+                         ['created'])
+        cfg.setWorkflowAdaptations(())
+        # do not use at_post_edit_script that does a cleanRamCache()
+        cfg.registerPortalTypes()
+        transaction.commit()
+        self.assertEqual(sorted(meeting.getBeforeFrozenStates()),
+                         ['created', 'published'])
+
+        # different for 2 meetingConfigs
+        self.setMeetingConfig(cfg2.getId())
+        meeting2 = self.create('Meeting', date=DateTime('2018/04/09'))
+        self.assertEqual(sorted(meeting2.getBeforeFrozenStates()),
+                         ['created', 'published'])
+        cfg2.setWorkflowAdaptations(('no_publication', ))
+        cfg2.registerPortalTypes()
+        transaction.commit()
+
+        # different values for different meetings
+        self.assertEqual(sorted(meeting.getBeforeFrozenStates()),
+                         ['created', 'published'])
+        self.assertEqual(sorted(meeting2.getBeforeFrozenStates()),
+                         ['created'])
+
+        # if no frozen state found, every states are considered as before frozen
+        # connect 'published' state to 'decided'
+        meeting_wf = self.wfTool.get('meeting_workflow')
+        meeting_wf.states.deleteStates(['frozen'])
+        cfg.at_post_edit_script()
+        self.assertEqual(sorted(meeting.getBeforeFrozenStates()),
+                         ['archived', 'closed', 'created', 'decided', 'published'])
 
     def test_pm_GetPrettyLink(self):
         """Test the Meeting.getPrettyLink method."""
