@@ -61,6 +61,8 @@ Older versions than 3.0 can be found at http://svn.communesplone.org/svn/commune
 - In content edited with CKeditor, force margin-bottom under tables to 0em because it is rendered this way
   with appy.pod (2 tables above each other are glued together by default in LibreOffice)
 - Added getProposingGroup index to plone.app.querystring fields selectable on a Collection
+- Fixed bug in Meeting.getBeforeFrozenStates that always returned the same values for different Meetings of
+  different MeetingConfigs that could lead to inconsistency
 
 4.0 (2017-08-04)
 ----------------
